# vim: set noexpandtab:

2012-09-17 Steve
	* Updated pileup file for A-E1
	* Added include of SusyGridCrossSectionTools.h for compiling
	* Tagging SusyCommon-00-00-37

2012-09-14 Matt
	* Added fill method for susyFinalState for the event class.
	* Added way to check sample name for saving susyFinalState

2012-09-12 Matt
	* Print statement not commented in buildMet.  Commented out now.

2012-09-12 Matt
	* Added pdf sys variables to the event class
	* Tagging SusyCommon-00-00-36

2012-09-11 Steve
	* Now using get_electrons_met to get electrons for the MET
	* Only match truth jets on MC

2012-09-08 Steve
	* Now updated to SUSYTools-00-01-06
	* Fixed the GRL in NtMaker
	* Replace RESOST up/down terms with single term, to reflect change in SUSYTools
	* Tagging SusyCommon-00-00-35

2012-09-06 Steve
	* Added the TTC incomplete event veto to the SusyNtMaker cutflow

2012-09-04 Matt
	* Fixed muon eff error

2012-09-03 Matt
	* Added Met Systematics

2012-09-03 Steve
	* Fixed initialization of SUSYObjDef, setting paths to muon SF and smearing files

2012-09-02 Matt
	* passLArHoleVeto() was reseting jet tlv causing issue with sys scale factor. 
	  commented out this function as it is no longer used anyway. 
	* Updated to SusyTools-00-01-05 
	* Updated electron systematics updated to handle the 4 shifts

2012-09-01 Steve
	* Adding cross section files for noslep grids
	A         data/modeA_hadW_MC1eqMN2.txt
	A         data/modeA_lepW_MC1eqMN2.txt
	A         data/modeC_lepW_MC1eqMN2.txt
	* Updating susySamples with the current available p1032 noslep grids

2012-08-29 Steve
	* Add truth jets to SusyD3PDInterface
	* Add method to SusyD3PDAna for matching reco jets to truth jets with dR
		* Used to set matchTruth flag in SusyNtMaker
	* Filling new tau variables: author, nTrack, eleBDT, jetBDT
	* Tagging SusyCommon-00-00-34

2012-08-26 Steve
	* Added pileup tools for A-B3, A-B, and A-D7
	* Filling the corresponding variables in the SusyNt