@@ -7,7 +7,7 @@ PACKAGE_PRELOAD  = Tree
 PACKAGE_CXXFLAGS = 
 PACKAGE_LDFLAGS  = 
 PACKAGE_BINFLAGS = -lCintex -lReflex
-PACKAGE_DEP      = SusyNtuple MultiLep
+PACKAGE_DEP      = SusyNtuple MultiLep LeptonTruthTools
 PACKAGE_NOOPT    = 0
 
 # PDFTool switch, set this variable to allow pdf reweighting of 7TeV to 8TeV
